...
  }

  @override
  Widget build(BuildContext context) {
    final maxContentWidth = ref.watch(peonHomeMaxWidthProvider);
    return Scaffold(
      key: const Key('peon-home-page'),
      body: SafeArea(
        top: false,
        bottom: _tab != _PeonTab.work,
        child: Column(
          children: [
            _PeonHeader(
...
